[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/laser_base.png" type="Texture" id=1]
[ext_resource path="res://assets/laser_area.png" type="Texture" id=2]
[ext_resource path="res://src/obstacles/LaserCollide.gd" type="Script" id=3]
[ext_resource path="res://src/obstacles/laser.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.259, 80 )

[node name="Laser" type="Control"]
margin_right = 80.0
margin_bottom = 192.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="laser_area" type="TextureRect" parent="."]
anchor_left = 0.2
anchor_right = 0.8
anchor_bottom = 1.0
grow_vertical = 2
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -192.0
margin_right = 24.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="laser_base" type="Sprite" parent="VBoxContainer"]
position = Vector2( 24, 176 )
texture = ExtResource( 1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -24.0
margin_right = 24.0
margin_bottom = 192.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="laser_base" type="Sprite" parent="VBoxContainer2"]
position = Vector2( 24, 16 )
rotation = 3.14159
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LaserCollide" type="Area2D" parent="MarginContainer"]
position = Vector2( 16, 0 )
input_pickable = false
monitoring = false
collision_layer = 2
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MarginContainer/LaserCollide"]
position = Vector2( 4, 20 )
shape = SubResource( 1 )

[connection signal="timeout" from="Timer" to="MarginContainer/LaserCollide" method="_on_Timer_timeout"]
